fixed nav issue on small screens

--- a/styles.css
+++ b/styles.css
@@ -1368,7 +1368,7 @@ footer > p {
     font-weight: bold;
     font-size: 1.1rem;
     color: #1f1f1f;
-    transform: translateY(300%);
+    transform: translateY(500%);
   }
 
   .nav-ul {
